--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
           <div id="footer">
             TMT is self-contained: save as plain HTML to run offline.
             <br/><br/>
-            Inspired by the <a href="https://godotengine.org/" target="_blank">Godot</a>.
+            Inspired by <a href="https://godotengine.org/" target="_blank">Godot</a>.
             Icons courtesy of <a href="https://material.io/resources/icons/" target="_blank">material.io</a>.
           </div>
 
